== SGT release v1.0.0 - ??? ==

- Initial commit.
- Added template cmake files.
- Preparing for initial build of Module loader.
- Successfully built module loader.
- Compiled template launcher app.
- Successfully built template launcher with memory module.
- Added lunagen project.
- Added lua dependency.
- Added OSG dependencies to lunagen.
- Simplified cmake files.
- Added support for lua package generation.
- Adding initial implementation of lunagen kernel.
- Calling executeMain in lunagen launcher.
- Renamed lunagen to sgt.
- build LuaState class in sgt_kernel
- create/destroy lua state in kernel.cpp, using implementatoin from scLuaState
- execute main module in lua state
- return exit code from main module execution.
- Added doxygen tool.