@@ -10,6 +10,7 @@ LINK_DIRECTORIES (${LUA_LIB_DIR})
 ADD_SUBDIRECTORY(ModuleLoader)
 ADD_SUBDIRECTORY(sgtLuna)
 ADD_SUBDIRECTORY(lua_core)
+ADD_SUBDIRECTORY(plug_core)
 ADD_SUBDIRECTORY(sgtCore)
 ADD_SUBDIRECTORY(sgtLauncher)
 
